@@ -355,7 +355,9 @@ sub clean_publisher_place {
 		decode_utf8('w Cieszynie') => decode_utf8('Cieszyn'),
 		decode_utf8('Č. Budějovice') => decode_utf8('České Budějovice'),
 		'Plzni' => decode_utf8('Plzeň'),
+		'Prag' => 'Praha',
 		'Praze' => 'Praha',
+		'W Praze' => 'Praha',
 		decode_utf8('Pardubicích') => 'Pardubice',
 		decode_utf8('Brně') => 'Brno',
 		decode_utf8('Hradci Králové') => decode_utf8('Hradec Králové'),
